bk_ida/gccida/c0/combine_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2332:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2332:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2334:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)usedreg)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2334:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)usedreg)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2389:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)usedreg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2390:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v40 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)usedreg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2419:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg_0), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2419:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg_0), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2421:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)setreg)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2421:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)setreg)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2476:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)setreg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2477:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v36 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)setreg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2488:43: error: use of undeclared identifier 'qty_0'
|| ssize > usize && ureg >= 53 && usize < qty_0[*( ( int *)reg_qty + ureg)].size 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2516:29: error: use of undeclared identifier 'qty_0'
&& reg_meets_class_p( sreg, qty_0[*( ( int *)reg_qty + ureg)].min_class) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2521:41: error: use of undeclared identifier 'qty_0'
*( ( _DWORD *)reg_next_in_qty + sreg) = qty_0[sqty].first_reg; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2522:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].first_reg = sreg; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2524:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].n_calls_crossed += *( _DWORD *)( reg_n_info->data.l[sreg] + 32); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2525:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].n_refs += *( _DWORD *)( reg_n_info->data.l[sreg] + 16); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/local-alloc.c:2526:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].freq += *( _DWORD *)( reg_n_info->data.l[sreg] + 20); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_regs/src/obj/local-alloc.o] Error 1
